<resources>
    <string name="app_name">HVS ATCS App</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Device ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_userid">This user ID is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_device_details">DeviceDetails</string>


    <string name="title_activity_setup_summery">SetupSummery</string>
    <string name="sample_time">2016-08-18 20:27:07</string>
    <string name="sample_mode">Recycler Mode</string>
    <string name="sample_value">75</string>
    <string name="temp_unit">C</string>
    <string name="sample_text_temp">Temperature 1</string>
    <string name="degree">o</string>
    <string name="break_time">Break Time</string>
    <string name="cycles">Cycles</string>
    <string name="flow_status">Flow Status</string>
    <string name="injection_time">Injection Time</string>
    <string name="motor_status">Motor Status</string>
    <string name="over_load">Over Load</string>
    <string name="temperature1">Temperature</string>
    <string name="temperature2">Temperature 2</string>
    <string name="pressure1">Pressure 1</string>
    <string name="pressure2">Pressure 2</string>
    <string-array name="modes">
        <item>Unknown Mode</item>
        <item>Unknown Mode</item>
        <item>Unknown Mode</item>
        <item>Unknown Mode</item>
        <item>Injection Mode</item>
        <item>Break Mode</item><!--Injection Break Mode-->
        <item>Retrival Mode</item>
        <item>Break Mode</item><!--Retrival Break Mode-->
        <item>Rest Mode</item>
    </string-array>
    <string name="title_activity_devices_list">DevicesListActivity</string>
    <string name="configurationChanges">Configuration Changes</string>
    <string name="signalStrength">Signal Strength</string>
    <string name="commit">Commit</string>
    <string name="configuration">Configuration Modules</string>
    <string name="sample_text_psr">Pressure 1</string>
    <string name="sample_text_temp2">Temperature 2</string>
    <string name="sample_text_psr2">Pressure 2</string>
    <string name="title_activity_update_settings">Update Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>


    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="list_refresh_default_time">10</string>
    <string name="status_refresh_time">status_refresh</string>
    <string name="list_refresh_time">list_refresh</string>

    <string name="action_config">Configure</string>
    <string name="mode">Mode :</string>
    <string name="log_out">Log Out</string>
    <string name="LOGGED_IN">loggedin</string>
    <string name="USERNAME_KEY">username</string>
    <string name="PASSWORD_KEY">password</string>
    <string name="MYKEY">mykey</string>

</resources>
