<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/temp1_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:padding="5dp"
            card_view:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_thermo"
                    android:layout_margin="5dp" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_text_temp"
                        android:textSize="15sp"
                        android:layout_marginTop="3dp" />

                    <TextView
                        android:id="@+id/temp1_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:maxLines="1"
                        android:text="@string/sample_value"
                        android:textSize="22sp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/psr1_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:padding="5dp"
            card_view:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_pressur"
                    android:layout_margin="5dp" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_text_psr"
                        android:textSize="15sp"
                        android:layout_marginTop="3dp" />

                    <TextView
                        android:id="@+id/psr1_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:maxLines="1"
                        android:text="@string/sample_value"
                        android:textSize="22sp" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/temp2_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:padding="5dp"
            card_view:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_thermo"
                    android:layout_margin="5dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_text_temp2"
                        android:textSize="15sp"
                        android:layout_marginTop="3dp" />

                    <TextView
                        android:id="@+id/temp2_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:maxLines="1"
                        android:text="@string/sample_value"
                        android:textSize="22sp" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/psr2_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:padding="5dp"
            card_view:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/tempsr_icon"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_pressur"
                    android:layout_margin="5dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/unittemporpsr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_text_psr2"
                        android:textSize="15sp"
                        android:layout_marginTop="3dp" />

                    <TextView
                        android:id="@+id/psr2_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:maxLines="1"
                        android:text="@string/sample_value"
                        android:textSize="22sp" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>