<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">


        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="5dp">



                    <TextView
                        android:id="@+id/fl_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="ON"
                        android:textColor="@color/switch_status_on"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        android:textAlignment="center" />


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey1" />



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:maxLines="1"
                        android:text="@string/flow_status"
                        android:textSize="18sp"
                        android:textAlignment="center" />


            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="5dp">



                    <TextView
                        android:id="@+id/motor_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="ON"
                        android:textColor="@color/switch_status_on"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        android:textAlignment="center" />


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey1" />



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:maxLines="1"
                        android:text="@string/motor_status"
                        android:textSize="18sp"
                        android:textAlignment="center" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">


        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="5dp">



                    <TextView
                        android:id="@+id/ovrd_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="NO"
                        android:textColor="@color/switch_status_on"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        android:textAlignment="center" />


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey1" />



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:maxLines="1"
                        android:text="@string/over_load"
                        android:textSize="18sp"
                        android:textAlignment="center" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="5dp">



                    <TextView
                        android:id="@+id/inject_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="10 sec"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        android:textAlignment="center" />


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey1" />



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:maxLines="1"
                        android:text="@string/injection_time"
                        android:textSize="18sp"
                        android:textAlignment="center" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">


        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="5dp">



                    <TextView
                        android:id="@+id/retriv_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="120 sec"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        android:textAlignment="center" />



                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey1" />



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:maxLines="1"
                        android:text="Retrival Time"
                        android:textSize="18sp"
                        android:textAlignment="center" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="5dp">



                    <TextView
                        android:id="@+id/break_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="5 sec"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        android:textAlignment="center" />


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey1" />



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:maxLines="1"
                        android:text="@string/break_time"
                        android:textSize="18sp"
                        android:textAlignment="center" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">


        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="5dp">



                    <TextView
                        android:id="@+id/cycles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="5"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        android:textAlignment="center" />


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey1" />



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:maxLines="1"
                        android:text="@string/cycles"
                        android:textSize="18sp"
                        android:textAlignment="center" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="5dp">



                    <TextView
                        android:id="@+id/rest_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="500 sec"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        android:textAlignment="center" />


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey1" />



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:maxLines="1"
                        android:text="Rest Time"
                        android:textSize="18sp"
                        android:textAlignment="center" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>